--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,6 @@ a {
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075),
     0 0 5px rgba(81, 167, 232, 0.5);
 }
-
 /* Vender Prefix (브라우저 업체별 접두사) */
 .input--text::-webkit-input-placeholder {
   color: #cacaca;
@@ -280,4 +279,78 @@ header .sub-menu li a:hover {
   padding: 0 25px;
   font-size: 20px;
   justify-content: center;
+}
+
+/* FEATURE */
+.section--feature {
+  background: #f5f5f5;
+  padding-top: 66px;
+}
+
+.section--feature .summary {
+  max-width: 820px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section--feature .video {
+  max-width: 650px;
+  margin: 50px auto;
+}
+
+.section--feature .video .video-ratio {
+  height: 0;
+  padding-top: 56.25%; /* 16:9비율 */
+  position: relative;
+}
+
+.section--feature .video .video-ratio iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.section--feature .tiles {
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.section--feature .tiles .inner {
+  max-width: 1200px;
+}
+
+.section--feature .tiles ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.section--feature .tiles li {
+  padding: 34px 24px;
+  text-align: center;
+  line-height: 1.5;
+  border-right: 1px solid #e5e5e5;
+  box-sizing: border-box;
+}
+
+.section--feature .tiles li:last-child {
+  border-right: none;
+}
+
+.section--feature .tiles li img {
+  max-width: 100%;
+  padding: 14px 10% 24px;
+  box-sizing: border-box;
+}
+
+.section--feature .tiles li h3 {
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.section--feature .tiles li p {
+  font-size: 14px;
+  color: #767676;
 }
